[workspace]
members = ["no-std"]
package.edition = "2024"
package.version = "0.1.0"
package.license = "0BSD"
package.repository = "https://github.com/SludgePhD/Ballpark"

[package]
name = "ballpark"
description = "Approximate comparisons for floating-point numbers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["mathematics", "no-std::no-alloc", "algorithms"]
keywords = ["ulp", "ulps", "approx", "equality"]

[features]
default = ["std"]

# When enabled, implements `ApproxEq` for some types in libstd.
std = ["alloc"]

# When enabled, implements `ApproxEq` for many data structures in liballoc.
alloc = []

# UNSTABLE: Support for Rust's `f16` half float type. Requires a nightly compiler.
f16 = []

# UNSTABLE: Support for Rust's `f128` quad precision type. Requires a nightly compiler.
f128 = []
